fix header overflow

--- a/assets/css/stylish-portfolio.css
+++ b/assets/css/stylish-portfolio.css
@@ -388,4 +388,5 @@ a:hover, a:focus, a:active {
 .btn-alpha {
   background: rgba(52, 58, 64, 0.5);
   pointer-events: none;
+  word-wrap: break-word;
 }
